constraint width instead of height for bill company logo to avoid overflow

--- a/media/css/pydici-pdf.css
+++ b/media/css/pydici-pdf.css
@@ -51,8 +51,8 @@ div.po-page {
 }
 
 .logo-image {
-    height: 80px;
-    width: auto;
+    height: auto;
+    width: 200px;
 }
 
 .company-name {
